<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name">Bank BJB</string>
    <string name="hello_world">Hello world!</string>
    <string name="header_title">APPT</string>
    <string name="pull_card">Please Pull Card&#8230;</string>
    <string name="remove_card">Please Remove Card&#8230;</string>
    <string name="pos_logon">Logon</string>
    <string name="pos_terminal_logon">Terminal Logon</string>
    <string name="pos_logout">Logout</string>
    <string name="pos_lockup">Lockup</string>
    <string name="sale_trans">Sale</string>
    <string name="sale_trans_qr">QR Sale</string>
    <string name="bankcard_pay_insert_sale">Insert Sale</string>
    <string name="sale_scan">Sale Scan</string>
    <string name="qr_generate">QR Generate</string>
    <string name="qr_inquiry">QR Inquiry</string>
    <string name="void_trans">Void</string>
    <string name="auth_trans">Pre-Auth</string>
    <string name="auth_trans_liff">Pre-Auth<xliff:g id="AMOUNT">%1$s</xliff:g></string>
    <string name="auth_void">PreAuth Void</string>
    <string name="auth_cm">PreAuth Comp</string>
    <string name="auth_cm_req">PreAuth Comp</string>
    <string name="auth_cm_adv_all">PreAuth Comp Advise</string>
    <string name="auth_cm_adv">Comp Advise</string>
    <string name="auth_cm_void_all">PreAuth Comp Void</string>
    <string name="auth_cm_void">Comp Void</string>
    <string name="auth_cmp">Comp</string>
    <string name="installment_trans">Installment</string>
    <string name="installment_Sale">Instal Sale</string>
    <string name="installment_Void">Instal Void</string>
    <string name="installment_num">Please Input Instal Number</string>
    <string name="installment_code">Plase Instal Project Code</string>
    <string name="install">Install</string>
    <string name="trans_readcard">Card Number Query</string>
    <string name="offline_trans">Offline</string>
    <string name="offline_settle">Off-Settle</string>
    <string name="settle_adjust">Adjust</string>
    <string name="select_auth_mode">Please Select Auth Mode</string>
    <string name="input_orig_auth_code">Please Enter Auth Code</string>
    <string name="input_auth_inst_code">Please Enter Auth Code</string>
    <string name="input_no_rek">Please Enter No Rekening</string>
    <string name="select_inter_code">Please Select Auth Mode</string>
    <string name="auth_mode_pos">POS</string>
    <string name="auth_mode_phone">Phone</string>
    <string name="auth_mode_small">Small</string>
    <string name="settle_adjust_amount_error">
        Adjust amount must be higher than the orignal amount
    </string>
    <string name="cup">CUP</string>
    <string name="vis">VIS</string>
    <string name="mcc">MCC</string>
    <string name="mae">MAE</string>
    <string name="jcb">JCB</string>
    <string name="dcc">DCC</string>
    <string name="amx">AMX</string>
    <string name="dana">Dana</string>
    <string name="electronic_cash">E-cash</string>
    <string name="ec_sale">Sale</string>
    <string name="ec_load">E-cash Load</string>
    <string name="ec_cash_balance">Balance Query</string>
    <string name="ec_balance">Balance</string>
    <string name="ec_detail">Detail</string>
    <string name="ec_load_detail">E-cash Load Detail</string>
    <string name="ec_offline_refund">Offline Refund</string>
    <string name="ec_trans_liff">E-cash<xliff:g id="AMOUNT">%1$s</xliff:g></string>
    <string name="ec_commodity">Commodity</string>
    <string name="ec_cash">Cash</string>
    <string name="ec_adjust">Adjust</string>
    <string name="ec_cheque_guarantee">Cheque Guarantee</string>
    <string name="ec_cheque_verify">Cheque Verify</string>
    <string name="ec_cheque_europe">Cheque Europe</string>
    <string name="ec_cheque_travel">Cheque Travel</string>
    <string name="ec_credit">Credit</string>
    <string name="ec_giro">Giro</string>
    <string name="ec_commodity_cash">Commodity Cash</string>
    <string name="ec_refund">Refund</string>
    <string name="ec_deposit">Deposit</string>
    <string name="ec_adjusted">Adjust</string>
    <string name="ec_cheque_cash_guarantee">Cheque Cash Guarantee</string>
    <string name="ec_cheque_cash">Cheque Cash</string>
    <string name="ec_balance_available">Available Balance Query</string>
    <string name="ec_id_verify">Account Verify</string>
    <string name="ec_id_transfer">Account Transfer</string>
    <string name="ec_details_query">E-cash Details Query</string>
    <string name="ic_trans_log">IC Card Transaction Records</string>
    <string name="ec_log_total_num">Total: <xliff:g id="TOTAL">%1$s</xliff:g> Items </string>
    <string name="ec_trans_type">Transaction Type:</string>
    <string name="ec_atc">ATC:</string>
    <string name="ec_date">Transaction Date:</string>
    <string name="ec_time">Transaction Time:</string>
    <string name="ec_trans_amount">Transaction Amount:</string>
    <string name="ec_other_amount">Other Amount:</string>
    <string name="ec_country_code">Country Code:</string>
    <string name="ec_currency_code">Currency Code:</string>
    <string name="ec_cash_refund">E-cash Offline Refund</string>
    <string name="ec_orig_term_id">Original Terminal ID</string>
    <string name="ec_orig_batch_no">Original Batch NO.</string>
    <string name="ec_orig_trans_no">Original Trans NO.</string>
    <string name="ec_orig_date">Original Date</string>
    <string name="prompt_err_term_id">Terminal ID Less Than 8 Digits,Please Check!</string>
    <string name="prompt_err_batch_no">Original Batch NO. Can Not Be Empty </string>
    <string name="prompt_err_trans_no">Original Trans NO. Can Not Be Empty</string>
    <string name="qc_cash_charge">E-cash Charge</string>
    <string name="qc_cash_charge_void">E-cash Charge Void</string>
    <string name="qc_allocated_account">Allocated Account Load</string>
    <string name="qc_non_allocated_account">Unallocated Account Load</string>
    <string name="qc_transfer_out_card">Please Use Transfer Out Card</string>
    <string name="qc_transfer_in_card">Please Use Transfer In Card(E-cash Card)</string>
    <string name="ecload_p1">P1:</string>
    <string name="ecload_p2">P2:</string>
    <string name="ecload_beforeAmount">E-cash Load Before Amount:</string>
    <string name="ecload_afterAmount">E-cash Load After Amount:</string>
    <string name="ecload_date">Date:</string>
    <string name="ecload_countryCode">Country Code:</string>
    <string name="ecload_merchName">Merchant Name:</string>
    <string name="ecload_atc">Transaction Counter:</string>
    <string name="emv_mon_ca">EMV PUK Query</string>
    <string name="emv_ca_down">EMV PUK Download</string>
    <string name="emv_ca_down_end">EMV PUK Download End</string>
    <string name="emv_mon_param">EMV Param Query</string>
    <string name="emv_pos_status_upload">EMV POS Status Upload</string>
    <string name="emv_param_down">EMV Param Download</string>
    <string name="echo">Echo</string>
    <string name="param_transmit">Param Transmission</string>
    <string name="emv_param_down_end">EMV Param Download End</string>
    <string name="black_down">Black Down</string>
    <string name="black_down_end">Black Down End</string>
    <string name="rate_down">Rate Download</string>
    <string name="ic_scr_send">IC Card Script Upload</string>
    <string name="download_param">Param Download</string>
    <string name="picc_download_param">PICC Param Download</string>
    <string name="bin_b_download">BIN B Download</string>
    <string name="bin_b_download_end">BIN B Download End</string>
    <string name="bin_c_download">BIN C Download </string>
    <string name="bin_c_download_end">BIN C Download End</string>
    <string name="picc_download_param_end">PICC Param Download End</string>
    <string name="settle">Settlement</string>
    <string name="batch_up">Batch Upload</string>
    <string name="batch_up_end">Batch Upload End</string>
    <string name="offline_trans_send">Offline</string>
    <string name="sign_send">Last</string>
    <string name="offline_trans_send_bat">Offline Upload</string>
    <string name="trans_balance">Balance Query</string>
    <string name="balance_prompt">Balance</string>
    <string name="trans_total">Total</string>
    <string name="trans_query">Trans Inquiry</string>
    <string name="total_debit">Total Sales</string>
    <string name="total_credit">Total Refunds</string>
    <string name="total_counts">Counts</string>
    <string name="total_amount">Amount</string>
    <string name="trans_detail">Konfirmasi Transaksi</string>
    <string name="trans_type">Type</string>
    <string name="trans_card_no">Card NO.</string>
    <string name="trans_card_no_or_pay_code">Card NO./Pay Code</string>
    <string name="trans_amount">Amount</string>
    <string name="trans_amount_default">%1$s %2$s</string>
    <string name="trans_oridate">Original Date</string>
    <string name="detail_auth_code">Auth Code</string>
    <string name="auth_code">Auth Code:</string>
    <string name="detail_trans_no">Trace NO.</string>
    <string name="trans_no">Trace NO.:</string>
    <string name="detail_trans_ref_no">Reference NO.</string>
    <string name="trans_ref_no">Reference NO.:</string>
    <string name="trans_date">Trans Date</string>
    <string name="trans_time">Trans Time:</string>
    <string name="date_and_time">Date/Time</string>
    <string name="trans_state">Trans Status</string>
    <string name="no_trans_record">No Trans Record</string>
    <string name="orig_trans_no_exist">Original Trans Not Exist</string>
    <string name="detail_discount">Discount</string>
    <string name="detail_cost">Cost</string>
    <string name="trans_moto">MO/TO</string>
    <string name="trans_moto_sale">Moto Sale</string>
    <string name="trans_moto_void">Moto Void</string>
    <string name="trans_moto_refund">Moto Refund</string>
    <string name="trans_moto_preauth">Moto PreAuth</string>
    <string name="trans_moto_preauth_void">Moto PreAuth Void</string>
    <string name="trans_moto_preauth_comp">Moto PreAuth Comp</string>
    <string name="trans_moto_preauth_comp_advise">Moto PreAuth Advise</string>
    <string name="trans_moto_preauth_comp_void">Moto PreAuth CompVoid</string>
    <string name="trans_recurring">Recurring</string>
    <string name="trans_recurring_void">Recurring Void</string>
    <string name="trans_coupon">Coupon</string>
    <string name="coupon_sale">Coupon Sale</string>
    <string name="coupon_void">Coupon Void</string>
    <string name="trans_mini_banking">Mini Banking</string>
    <string name="trans_fund_transfer">Transfer Dana</string>
    <string name="trans_transfer">Transfer Antar Bank</string>
    <string name="trans_balance_information">Informasi Saldo</string>
    <string name="trans_overbooking_inq">Overbooking</string>
    <string name="trans_deposit">Setor Tunai</string>
    <string name="trans_withdrawal">Tarik Tunai</string>
    <string name="trans_mini_statement">Mini Statement</string>
    <string name="trans_change_pin">Ganti PIN</string>
    <string name="trans_opening_account">Pembukaan Rekening</string>
    <string name="trans_cancelation_account">Pembatalan Rekening</string>
    <string name="trans_account_list">Daftar Account</string>
    <string name="trans_overbooking">Overbooking</string>
    <string name="trans_transfer_sesama">Transfer Antar Rekening</string>
    <string name="trans_operator">Operator</string>
    <string name="trans_product_name">Product Name</string>
    <string name="trans_product_desc">Product Description</string>
    <string name="trans_product_price">Product Price</string>
    <string name="scan_pay_code">Pay Code</string>
    <string name="amount_default">0</string>
    <string name="prompt_bankcard_pwd">Silahkan Masukkan PIN Anda</string>
    <string name="prompt_no_password">No password, Please Click OK</string>
</resources>