<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc" />
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">


        <!--Operator-->
        <TextView
            android:id="@+id/trans_operator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:textSize="@dimen/font_size_smallest"
            android:text="@string/trans_operator" />

        <!--Product Name-->
        <TextView
            android:id="@+id/trans_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:textSize="@dimen/font_size_smallest"
            android:text="@string/trans_product_name" />

        <!--Product Description-->
        <TextView
            android:id="@+id/trans_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:textSize="10dp"
            android:text="@string/trans_product_desc" />


        <!--Product Price-->
        <TextView
            android:id="@+id/trans_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:textSize="@dimen/font_size_small"
            android:text="@string/trans_product_price" />

    </LinearLayout>


</LinearLayout>