<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/header_layout" />

    <LinearLayout
        android:id="@+id/trans_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@layout/header_layout"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="55dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/trans_amount"
            android:textColor="@color/prompt_no_pwd_color"
            android:textSize="@dimen/font_size_normal_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:gravity="bottom"
            android:text="￥"
            android:textColor="@color/trans_amount_color"
            android:textSize="@dimen/font_size_small" />

        <TextView
            android:id="@+id/amount_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/amount_default"
            android:textColor="@color/trans_amount_color"
            android:textSize="@dimen/font_size_larger" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/prompt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/prompt_bankcard_pwd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:paddingTop="5dp"
            android:id="@+id/pwd_input_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_frame"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_larger" />


        <TextView
            android:id="@+id/prompt_no_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/prompt_no_password"
            android:textColor="@color/prompt_no_pwd_color"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

</RelativeLayout>