<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/trans_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/font_size_small" />

        <TextView
            android:id="@+id/trans_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/font_size_normal" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/auth_code"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/auth_code_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/card_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_pay_code"
            android:textColor="@color/prompt_text_color"
            android:textSize="@dimen/font_size_smaller" />

        <TextView
            android:id="@+id/card_no_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="2"
            android:textSize="@dimen/font_size_smaller" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trans_no"
            android:textColor="@color/prompt_text_color"
            android:textSize="@dimen/font_size_smaller" />

        <TextView
            android:id="@+id/trans_no_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.5"
            android:textSize="@dimen/font_size_smaller" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trans_time"
            android:textColor="@color/prompt_text_color"
            android:textSize="@dimen/font_size_smaller" />

        <TextView
            android:id="@+id/trans_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="2"
            android:textSize="@dimen/font_size_smaller" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trans_ref_no"
            android:textColor="@color/prompt_text_color"
            android:textSize="@dimen/font_size_smaller" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textSize="@dimen/font_size_smaller" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trans_state"
            android:textColor="@color/prompt_text_color"
            android:textSize="@dimen/font_size_smaller" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="2"
            android:textSize="@dimen/font_size_smaller" />
    </LinearLayout>

</LinearLayout>